--- a/Objects/project.build_log.htm
+++ b/Objects/project.build_log.htm
@@ -23,11 +23,12 @@ Project File Date:  10/30/2018
 
 <h2>Output:</h2>
 Build target 'Target 1'
+assembling console.a51...
 assembling proc_b.a51...
 linking...
 Program Size: data=8.0 xdata=0 code=108
 ".\Objects\project" - 0 Error(s), 0 Warning(s).
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:00
 </pre>
 </body>
 </html>
