--- a/Objects/project.build_log.htm
+++ b/Objects/project.build_log.htm
@@ -23,11 +23,12 @@ Project File Date:  11/06/2018
 
 <h2>Output:</h2>
 Build target 'Target 1'
+assembling console.a51...
 assembling scheduler.a51...
 linking...
 Program Size: data=8.0 xdata=0 code=148
 ".\Objects\project" - 0 Error(s), 0 Warning(s).
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
