--- a/Objects/project.build_log.htm
+++ b/Objects/project.build_log.htm
@@ -5,7 +5,7 @@
 <h2>Tool Versions:</h2>
 IDE-Version: µVision V5.25.3.0
 Copyright (C) 2018 ARM Ltd and ARM Germany GmbH. All rights reserved.
-License Information: Nicht Franz, notIbm, LIC=----
+License Information: Bastian Frewert, a, LIC=----
  
 Tool Versions:
 Toolchain:       PK51 Prof. Develpers Kit  Version: 9.59.0.0
@@ -18,14 +18,14 @@ Hex Converter:   OH51.exe V2.7.0.0
 CPU DLL:         S8051.DLL V3.122.0.0
 Dialog DLL:      D500.DLL V2.51.0.0 
 <h2>Project:</h2>
-C:\Users\BUBELF\Documents\uni\rechnerarchitektur\gimme dat ass\Scheduler\project.uvproj
-Project File Date:  10/30/2018
+C:\Users\FREWERTB\Documents\GitHub\scheduler_8051\project.uvproj
+Project File Date:  11/06/2018
 
 <h2>Output:</h2>
 Build target 'Target 1'
 assembling proc_b.a51...
 linking...
-Program Size: data=8.0 xdata=0 code=119
+Program Size: data=8.0 xdata=0 code=131
 ".\Objects\project" - 0 Error(s), 0 Warning(s).
 Build Time Elapsed:  00:00:00
 </pre>
