--- a/Objects/project.build_log.htm
+++ b/Objects/project.build_log.htm
@@ -23,10 +23,10 @@ Project File Date:  11/06/2018
 
 <h2>Output:</h2>
 Build target 'Target 1'
-assembling console.a51...
-assembling scheduler.a51...
+assembling proc_a.a51...
+assembling proc_b.a51...
 linking...
-Program Size: data=8.0 xdata=0 code=148
+Program Size: data=8.0 xdata=0 code=186
 ".\Objects\project" - 0 Error(s), 0 Warning(s).
 Build Time Elapsed:  00:00:01
 </pre>
