--- a/Objects/project.build_log.htm
+++ b/Objects/project.build_log.htm
@@ -19,13 +19,13 @@ CPU DLL:         S8051.DLL V3.122.0.0
 Dialog DLL:      D500.DLL V2.51.0.0 
 <h2>Project:</h2>
 C:\Users\BUBELF\Documents\uni\rechnerarchitektur\gimme dat ass\Scheduler\project.uvproj
-Project File Date:  11/09/2018
+Project File Date:  11/11/2018
 
 <h2>Output:</h2>
 Build target 'Target 1'
-assembling console.a51...
+assembling proc_a.a51...
 linking...
-Program Size: data=8.0 xdata=0 code=505
+Program Size: data=8.0 xdata=0 code=887
 ".\Objects\project" - 0 Error(s), 0 Warning(s).
 Build Time Elapsed:  00:00:01
 </pre>
