--- a/Objects/project.build_log.htm
+++ b/Objects/project.build_log.htm
@@ -23,8 +23,9 @@ Project File Date:  11/11/2018
 
 <h2>Output:</h2>
 Build target 'Target 1'
+assembling init.a51...
 linking...
-Program Size: data=8.0 xdata=0 code=887
+Program Size: data=8.0 xdata=0 code=1004
 ".\Objects\project" - 0 Error(s), 0 Warning(s).
 Build Time Elapsed:  00:00:01
 </pre>
